# ContigChecker

./: .gitignore  README.md  input.cfg  setup.cfg
contig_checker/: __init__.py  cc_annotate.py  cc_depth.py  cc_map.py  cc_plot.py  run.py  simulator.py
src/: cc_map.py  contig_checker.py
