[metadata]
name = CTCC
version = 0.0.1
description = Checking Toplogy and Correctness of Contigs
long_description = file: README.md
author = Yoshihiko Suzuki
# license = file: LICENSE


[options]
packages =
  contig_checker
install_requires =
  BITS
dependency_links =
  git+ssh://git@github.com/yoshihikosuzuki/BITS.git#egg=BITS


[options.entry_points]
console_scripts =
  ctcc.py = contig_checker.run:main


[options.packages.find]
exclude =
  tests
  docs
